# antispamhysb

./: main.py  pyproject.toml
templates/: captcha.html  login.html  quiz.html
